fixed navbar z-index

--- a/common/styles/_navbar.scss
+++ b/common/styles/_navbar.scss
@@ -9,7 +9,6 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  z-index: 999;
 
   @media (min-width: $screen-sm-min) {
     flex-direction: column;
